src/objects/Business_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Business_Function__c</fullName>
        <inlineHelpText>What part of the Nokia organization will be affected by the Business Activity?  Select from the drop down list.</inlineHelpText>
        <label>Business Function</label>
        <picklist>
            <picklistValues>
                <fullName>Marketing &amp; communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services &amp; support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations &amp; supply chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development &amp; roadmap management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central functions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy &amp; vision</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Describe the customer&apos;s need and how this Activity will address that need.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Value_Stream__c</fullName>
        <inlineHelpText>Select the Value Steam from the drop down list to map that matches the Customer&apos;s Perceived Value.</inlineHelpText>
        <label>Value Stream</label>
        <picklist>
            <picklistValues>
                <fullName>Features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test1</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Business Activity</label>
    <nameField>
        <label>Business Activity</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>